--- a/Entregable/entregable.css
+++ b/Entregable/entregable.css
@@ -4,7 +4,62 @@
     margin: 0;
 }
 
+body{
+    font-family:Arial, Helvetica, sans-serif;
+}
 
+.modal-container{
+    display: none;
+}
+
+button{
+    background-color: #47a386;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 2px  4px rgba(0, 0, 0, 0.2);
+    color: white;
+    font-size: 14px;
+    padding: 10px 25px;
+    width: 100px;
+}
+
+.modal-container{
+    display: flex;
+    background-color: rgba(0, 0 ,0 , 0.3);
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    opacity: 0;
+}
+
+.show{
+    pointer-events: auto;
+    opacity: 1;
+}
+
+.modal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    width: 600px;
+    max-width: 100%;
+    padding: 20px 50px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+
+
+.modal-item{
+    padding: 10px;
+}
 
 header{
     width: 100%;
