--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -1,5 +1,21 @@
 
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+#canvas-container {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    background-color: #212529;
+}
+
 canvas {
     background-color: #212529;
+    align-self: center;
+    border: 2px solid silver;
     display: none;
+    border-radius: 25px;
 }
