--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -4,22 +4,26 @@
     height: 100%;
 }
 
+
+
 canvas {
     background-color: #212529;
     align-self: center;
     border: 2px solid silver;
     display: none;
     border-radius: 25px;
-<<<<<<< HEAD
     margin-left: 90px;
-=======
->>>>>>> 537f348049c83462704109db513b1d2d6a88b89e
 }
 
-
+#winner-modal .modal-dialog .modal-content{
+    background-color: #212529;
+    color: white;
+    border: 2px solid silver;
+    align-items: center;
+}
 #timer { 
     color: white;
-    margin-left: 400px;
+    margin-left: 600px;
     font-size: large;
     font-weight: bolder;
 }
@@ -27,6 +31,8 @@ canvas {
 #timer-title {
     margin-right: 20px;
 }
+
+
 
 #container{
     display: flex;
