--- a/Entregable3/css/style.css
+++ b/Entregable3/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background: #f5b593;
+    background: #231144;
     display: flex;
     align-items: center;
 }
@@ -26,14 +26,14 @@ body{
 
 .t-rex{
     width: 84px;
-    height: 84px;
+    height: 200px;
     position: absolute;
     bottom: 30px;
     left: 42px;
-    z-index: 2;
     background: url(../img/dino.png) repeat-x 0px 0px;
     background-size: 336px 84px;
     background-position-x: 0px;
+    z-index: 5;
 }
 
 /*desplaza la imagen del fondo para que se mueva
@@ -52,19 +52,18 @@ simulando la corrida del t-rex*/
     animation: animateTRex 0.25s steps(2) infinite;
 }
 
-/* para que el suelo simule ser infinito
-lo definimos el doble de ancho que el contenedor */
-/*
-.ground{
-    width: 200%;
-    height: 42px;
-    position: absolute;
-    background: url(../img/suelo.png) repeat-x 0px 0px;
-    background-size: 50% 42px;
-    bottom: 0;
-    left: 0;
+
+@keyframes jump {
+ 
+    0% {background-position-y: -30px;}
+    50% {background-position-y: -80px;}
+    100% {background-position-y: -30px;}
 }
-*/
+
+.jumping{
+    animation: jump 0.85s steps(3) 1;
+}
+
 
 @keyframes scroll {
     0% { background-position-x: 0px; }
@@ -83,6 +82,7 @@ lo definimos el doble de ancho que el contenedor */
     animation: scroll 12s infinite linear;
     bottom: 0;
     height: 42px;
+    z-index: 4;
 }
 
 .layer-2 {
@@ -92,6 +92,7 @@ lo definimos el doble de ancho que el contenedor */
     height: 50px;
     transform: scale(1, 1.5);
     bottom: 24px;
+    z-index: 4;
 }
 
 .layer-3 {
@@ -111,10 +112,11 @@ lo definimos el doble de ancho que el contenedor */
     top: 200px;
     transform: scale(1.7);
     width: 100%;
-}
+    z-index: 6;
+} 
 
 .layer-5 {
-    background: url(../img/sun.png) repeat-x 0px 0px;
+    background: url("../img/sun.png") repeat-x 0px 0px;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -127,10 +129,14 @@ lo definimos el doble de ancho que el contenedor */
     position: absolute;
     top: 10px;
     right: 15px;
-    color: black;
+    color: rgb(48, 45, 45);
     font-size: 30px;
     font-weight: bold;
     text-align: right;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-   
+    z-index: 4;
+}
+
+.game-over{
+    display: none;
 }
