--- a/Entregable3/css/style.css
+++ b/Entregable3/css/style.css
@@ -16,7 +16,7 @@ body{
 .container{
     overflow: hidden;
     width: 920px;
-    height: 400px;
+    height: 500px;
     margin: 0 auto;
     margin-top: 100px;    
     position: relative;
@@ -26,11 +26,12 @@ body{
 
 .t-rex{
     width: 84px;
-    height: 200px;
+    height: 300px;
     position: absolute;
     bottom: 30px;
     left: 42px;
     background: url(../img/dino.png) repeat-x 0px 0px;
+    background-position: bottom;
     background-size: 336px 84px;
     background-position-x: 0px;
     z-index: 5;
@@ -55,9 +56,9 @@ simulando la corrida del t-rex*/
 
 @keyframes jump {
  
-    0% {background-position-y: -30px;}
-    50% {background-position-y: -80px;}
-    100% {background-position-y: -30px;}
+    0% {background-position-y: 0px;}
+    50% {background-position-y: 0px;}
+    100% {background-position-y: 0px;}
 }
 
 .jumping{
