super dino added

--- a/Entregable3/css/style.css
+++ b/Entregable3/css/style.css
@@ -37,6 +37,12 @@ body{
     z-index: 5;
 }
 
+.superheroe{
+    background: url(../img/dino-fly.png) repeat-x 0px 0px;
+    bottom: -60px;
+    width: 80px;
+}
+
 /*desplaza la imagen del fondo para que se mueva
 entre las dos fotos que muestran al dinosaurio corriendo*/
 @keyframes animateTRex {
@@ -79,7 +85,7 @@ simulando la corrida del t-rex*/
 
 .layer-1 {
     width: 100%;
-    background-image: url("../img/suelo.png");
+    background-image: url(../img/suelo.png);
     animation: scroll 12s infinite linear;
     bottom: 0;
     height: 42px;
@@ -88,7 +94,7 @@ simulando la corrida del t-rex*/
 
 .layer-2 {
     width: 200%;
-    background-image: url("../img/cactus.png");
+    background-image: url(../img/cactus.png);
     animation: scroll 12s infinite linear;
     height: 50px;
     transform: scale(1, 1.5);
@@ -97,7 +103,7 @@ simulando la corrida del t-rex*/
 }
 
 .layer-3 {
-    background-image: url("../img/nube.png");
+    background-image: url(../img/nube.png);
     animation: scroll 200s infinite linear;
     height: 50px;
     top: 40px;
@@ -107,7 +113,7 @@ simulando la corrida del t-rex*/
 }
 
 .layer-4 {
-    background-image: url("../img/ufos.png");
+    background-image: url(../img/ufos.png);
     animation: scroll 9s infinite ease-in-out;
     height: 50px;
     top: 200px;
@@ -117,7 +123,7 @@ simulando la corrida del t-rex*/
 } 
 
 .layer-5 {
-    background: url("../img/sun.png") repeat-x 0px 0px;
+    background: url(../img/sun.png) repeat-x 0px 0px;
     position: absolute;
     width: 100%;
     height: 100%;
