--- a/Entregable3/css/style.css
+++ b/Entregable3/css/style.css
@@ -24,6 +24,12 @@ body{
     border: 2px solid rgba(0, 0, 0, 0.616);
 }
 
+.transition-super{
+    
+    background: rgb(25, 25, 112);
+    z-index: 1;
+}
+
 .t-rex{
     width: 84px;
     height: 300px;
@@ -61,11 +67,12 @@ simulando la corrida del t-rex*/
 
 
 @keyframes jump {
- 
+    
     0% {background-position-y: 0px;}
     50% {background-position-y: 0px;}
     100% {background-position-y: 0px;}
-}
+
+} 
 
 .jumping{
     animation: jump 0.85s steps(3) 1;
@@ -128,6 +135,40 @@ simulando la corrida del t-rex*/
     width: 100%;
     height: 100%;
     z-index: 2;
+}
+
+
+.ground-super{
+    animation: scroll 3s infinite linear;
+}
+
+.cactus-super{
+    animation: scroll 3s infinite linear;
+}
+
+.cloud-super{
+    animation: scroll 50s infinite linear;
+}
+
+.ufo-super{
+    animation: scroll 2.25s infinite linear;
+}
+
+.ground-faster{
+    animation: scroll 6s infinite linear;
+
+}
+
+.cactus-faster{
+    animation: scroll 6s infinite linear;
+}
+
+.cloud-faster{
+    animation: scroll 100s infinite linear;
+}
+
+.ufo-faster{
+    animation: scroll 4.5s infinite linear;
 }
 
 .score{
