added score count and jump with keyframe

--- a/Entregable3/css/style.css
+++ b/Entregable3/css/style.css
@@ -67,15 +67,26 @@ simulando la corrida del t-rex*/
 
 
 @keyframes jump {
-    
-    0% {background-position-y: 0px;}
-    50% {background-position-y: 0px;}
-    100% {background-position-y: 0px;}
-
+    0% {background-position-y: 210px;}
+    20% {background-position-y: 20px;}
+    30% {background-position-y: 20px;}
+    40% {background-position-y: 20px;}
+    50% {background-position-y: 20px;}
+    100% {background-position-y: 210px;}
 } 
 
+@keyframes readyToFly {
+    0% {background-position-y: 210px;}
+    20% {background-position-y: 20px;}
+    30% {background-position-y: 20px;}
+    40% {background-position-y: 20px;}
+    50% {background-position-y: 20px;}
+    100% {background-position-y: 20px;}
+} 
+
+
 .jumping{
-    animation: jump 0.85s steps(3) 1;
+    animation: jump 1.5s steps(20) 1;
 }
 
 
