--- a/Entregable5/loginStyles.css
+++ b/Entregable5/loginStyles.css
@@ -13,19 +13,29 @@
 .sign-in{
     width: 246px;
     height: 52px;
+    border-style: none;
     border: 2px solid #203F65;
     background-color: #FFFFFF;
     align-self: center;
     margin-bottom: 55px;
+    position: absolute;
+    left: calc(50% - 246px/2 + 8px);
+    top: calc(50% - 52px/2 - 67px);
+    border-radius: 5px;
 }
 
 .sign-up{
     width: 246px;
-    height: 52px;
+    height: 52px;  
+    left: 63px;
+    top: 419px;
     background-color: #203F65;
+    border-style: none;
     color: #FFFFFF;
     align-self: center;
     margin: 10px;
+    position: absolute;
+    border-radius: 5px;
 }
 
 .logo{
@@ -34,11 +44,18 @@
 }
 
 .home-photo{
+    position: absolute;
     width: 246px;
     height: 258px;
+    left: 47px;
+    top: 560px;
 }
 
 .home-message{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
+    text-align: center;
+}
+
+.button-text{
+    
 }
