--- a/Entregable5/homeStyles.css
+++ b/Entregable5/homeStyles.css
@@ -1,10 +1,66 @@
-.user-avatar{
-    position: absolute;
+*{
+    font-family: 'Mulish', sans-serif;
+}
+.chat-image {
     width: 64px;
     height: 63px;
+    border-radius: 50%;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 16px;
     left: 20px;
     top: 11px;
     background-image: url(assets/user.jpeg);
+}
+
+.top-container{
+    position: absolute;
+    width: 375px;
+    height: 86px;
+    left: 0px;
+    top: 32px;
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.18));
+}
+
+
+#separator{
+    background-color: black;
+    opacity: 0.2;
+    height: 2px;
+}
+
+.header-title{
+    position: absolute;
+    width: 227px;
+    height: 40px;
+    left: 140px;
+    top: 12px;
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 16px;
+    /* or 80% */
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #60C5D1;
+}
+
+.status{
+    position: fixed;
+    width: 12px;
+    height: 12px;
+    left: 70px;
+    top: 60px;
+    border-radius: 50%;
+    background: #006C84;
+    /* Light / neutral.containerBackground */
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
 }
 
 .container-login{
@@ -18,4 +74,252 @@
 header{
     width: 375px;
     height: 86px;
+}
+
+#zoom{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 73%;
+    right: 14.13%;
+    top: 35%;
+    bottom: 36.05%;
+
+    /* Light / neutral.labelPrimary */
+
+}
+.header-info{
+    width: 340px;
+    display: flex;
+    flex-direction: column;
+}
+
+#conversations{
+
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    left: 327px;
+    top: 32px;
+
+}
+
+.post{
+    position: absolute;
+    width: 343.63px;
+    height: 440px;
+    left: 17px;
+    top: 139px;
+
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.post-header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 7px 16px;
+    
+    position: static;
+    width: auto;
+    height: 55px;
+    left: 0px;
+    top: 0px;
+    
+    /* Light / neutral.containerBackground */
+    
+    background: #FFFFFF;
+    border-radius: 4px 4px 0px 0px;
+    
+    /* Inside Auto Layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 0px;
+}
+
+.options{
+    position: static;
+    width: 24px;
+    height: 24px;
+    left: 340px;
+    top: 15.5px;
+    
+    /* Inside Auto Layout */
+    
+    flex: none;
+    order: 2;
+    flex-grow: 0;
+    margin: 0px 12px;
+}
+
+.user-name{
+    position: static;
+    width: auto;
+    height: 16px;
+    left: 0px;
+    top: 0px;
+
+    /* subtitle12 */
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 16px;
+    /* identical to box height, or 133% */
+
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+
+    /* Light / neutral.labelPrimary */
+
+    color: #282B33;
+
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 0px;
+}
+
+.post-hour{
+    position: static;
+    width: 74px;
+    height: 16px;
+    left: 0px;
+    top: 0px;
+
+    /* text12 */
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    /* identical to box height, or 133% */
+
+
+    /* Light / neutral.labelTertiary */
+
+    color: #6C727E;
+
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 4px;
+}
+
+.user-post{
+    
+    position: static;
+    width: 40.63px;
+    height: 41px;
+    left: 16px;
+    top: 7px;
+
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 12px;
+}
+
+.status-post{
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    left: 62px;
+    top: 43px;
+
+    background: #006C84;
+    /* Light / neutral.containerBackground */
+
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+}
+
+.post-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+
+    position: static;
+    width: 343px;
+    height: 329px;
+    left: 0.32px;
+    top: 55px;
+
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin: 0px 0px;
+}
+
+.post-text{
+    position: static;
+    width: 319px;
+    height: 46px;
+    left: 12px;
+    top: 12px;
+
+    /* text12 */
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: justify;
+    /* or 133% */
+
+
+    /* Light / neutral.labelSecondary */
+
+    color: #3D424D;
+
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 12px 0px;
+}
+
+.post-link{
+    position: static;
+    width: 151px;
+    height: 16px;
+    left: 0px;
+    top: 0px;
+
+    /* text12Bold */
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 16px;
+    /* identical to box height, or 133% */
+
+    color: #006C84;
+
+    display: flex;
+    align-self: left;
+    /* Inside Auto Layout */
+
+    margin: 0px 4px;
 }
