--- a/Entregable5/searchEmptyStyles.css
+++ b/Entregable5/searchEmptyStyles.css
@@ -40,7 +40,7 @@ input:focus {
     margin-left: 16px;
 }
 
-.thin-separator {
+.separator {
     background-color: black;
     opacity: 0.2;
     height: 2px;
