--- a/Entregable5/homeStyles.css
+++ b/Entregable5/homeStyles.css
@@ -107,14 +107,15 @@ header{
 }
 
 .post{
-    position: absolute;
+    position: relative;
     width: 343.63px;
     height: 440px;
-    left: 17px;
+    left: 12px;
     top: 139px;
 
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+
 
 .post-header{
     display: flex;
@@ -529,8 +530,8 @@ header{
     position: fixed;
     left: 0%;
     right: 0%;
-    bottom: 40px;
-    height: 40px;
+    bottom: 10px;
+    height: 60px;
     background: #FFFFFF;
 }
 
@@ -539,7 +540,7 @@ header{
     width: 32px;
     height: 32px;
     left: 16px;    
-    top: 27px;
+    top: 23px;
     opacity: 70%;
 
 }
@@ -549,7 +550,7 @@ header{
     width: 32px;
     height: 32px;
     left: 94px;
-    top: 27px;
+    top: 23px;
     opacity: 70%;
 
 }
@@ -559,7 +560,7 @@ header{
     width: 32px;
     height: 34.13px;
     left: 171.5px;
-    top: 26px;
+    top: 23px;
     opacity: 70%;
 
 }
@@ -569,7 +570,7 @@ header{
     width: 37px;
     height: 37px;
     left: 249px;
-    top: 27px;
+    top: 23px;
     opacity: 70%;
 }
 
@@ -578,6 +579,6 @@ header{
     width: 27px;
     height: 27px;
     left: 325px;
-    top: 30px;
+    top: 26px;
     opacity: 70%;
 }
