--- a/Entregable5/homeStyles.css
+++ b/Entregable5/homeStyles.css
@@ -112,8 +112,12 @@ header{
     height: 440px;
     left: 12px;
     top: 139px;
-
+    margin-bottom: 22px;
+    margin-top: 22px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.post2{
+    margin-top: 70px;
 }
 
 
@@ -530,7 +534,7 @@ header{
     position: fixed;
     left: 0%;
     right: 0%;
-    bottom: 10px;
+    bottom: 0px;
     height: 60px;
     background: #FFFFFF;
 }
@@ -540,7 +544,7 @@ header{
     width: 32px;
     height: 32px;
     left: 16px;    
-    top: 23px;
+    top: 15px;
     opacity: 70%;
 
 }
@@ -550,7 +554,7 @@ header{
     width: 32px;
     height: 32px;
     left: 94px;
-    top: 23px;
+    top: 15px;
     opacity: 70%;
 
 }
@@ -560,7 +564,7 @@ header{
     width: 32px;
     height: 34.13px;
     left: 171.5px;
-    top: 23px;
+    top: 15px;
     opacity: 70%;
 
 }
@@ -570,7 +574,7 @@ header{
     width: 37px;
     height: 37px;
     left: 249px;
-    top: 23px;
+    top: 15px;
     opacity: 70%;
 }
 
@@ -579,6 +583,6 @@ header{
     width: 27px;
     height: 27px;
     left: 325px;
-    top: 26px;
+    top: 18px;
     opacity: 70%;
 }
