--- a/Entregable5/searchPeopleStyles.css
+++ b/Entregable5/searchPeopleStyles.css
@@ -56,13 +56,15 @@ input:focus {
     margin-left: 16px;
 }
 
-.navbar-text:hover, .selected:hover {
-    background-color: #203F65;
-    color: white;
-    cursor: pointer;
-    border-radius: 10%;
-    padding: 4px;
-    opacity: 0.9;
+@media (hover: hover) {
+    .navbar-text:hover, .selected:hover {
+        background-color: #203F65;
+        color: white;
+        cursor: pointer;
+        border-radius: 10%;
+        padding: 4px;
+        opacity: 0.9;
+    }
 }
 
 .selected {
