--- a/Entregable5/homeStyles.css
+++ b/Entregable5/homeStyles.css
@@ -65,7 +65,7 @@
 
 .container-login{
     width: 375px;
-    height: 812;
+    height: auto;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -92,6 +92,7 @@ header{
     width: 340px;
     display: flex;
     flex-direction: column;
+    margin: 0%;
 }
 
 #conversations{
@@ -112,8 +113,7 @@ header{
     height: 440px;
     left: 12px;
     top: 139px;
-    margin-bottom: 22px;
-    margin-top: 22px;
+    margin-bottom: 44px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .post2{
@@ -190,7 +190,7 @@ header{
     flex: none;
     order: 0;
     flex-grow: 0;
-    margin: 0px 0px;
+    margin: 0%;
 }
 
 .post-hour{
@@ -199,6 +199,7 @@ header{
     height: 16px;
     left: 0px;
     top: 0px;
+    margin: 0% !important;
 
     /* text12 */
 
@@ -273,7 +274,7 @@ header{
     flex: none;
     order: 1;
     flex-grow: 0;
-    margin: 0px 0px;
+    margin: 0px;
 }
 
 .post-text{
@@ -338,14 +339,26 @@ header{
     left: 8.5px;
     top: 98px;
 
-    background: url(assets/labrador.jpg);
-
     /* Inside Auto Layout */
 
     flex: none;
     order: 3;
     flex-grow: 0;
     margin: 12px 0px;
+}
+.image-post{
+    width: 326px;
+    height: 189px;
+}
+
+.play{
+    position: relative;
+    width: 64px;
+    height: 64px;
+    left: 131px;
+    bottom: 131px;
+    opacity: 75%;
+
 }
 
 .container-content{
@@ -529,7 +542,9 @@ header{
     left: 6px;
     top: 16px;
 }
-
+section.body-container{
+    height: auto;
+}
 .footer-page{
     position: fixed;
     left: 0%;
