--- a/Entregable5/chatStyles.css
+++ b/Entregable5/chatStyles.css
@@ -13,9 +13,10 @@
 .video-camera{
     position: relative;
     width: 48px;
-    height: 35px;
-    left: 20px;
-    top: -7px;
+    height: 40px;
+    margin: 0px 10px;
+    left: 40px;
+    top: -10px;
 
 }
 .chat-image {
@@ -70,7 +71,7 @@
 .top-container{
     position: absolute;
     width: 375px;
-    height: 86px;
+    height: auto;
     left: 0px;
     top: 32px;
     filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.18));
@@ -82,25 +83,54 @@
     width: 373px;
     height: 91px;
     left: 1px;
-    top: 124px;
+    top: 84px;
 
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .chat1{
-    position: absolute;
+
     width: 64px;
     height: 63px;
-    left: 15px;
+    left: 16px;
     top: 14px;
+    margin: 0px;
 }
 
+.chat2{
+    top:120px;
+    left: 16px;
+    margin: 0px;
+}
+
+.chat3{
+   top: 225px;
+   margin: 0px;
+   left: 16px;
+}
+.chat4{
+    top: 325px;
+    left: 16px;
+    margin: 0px;
+}
+
+.chat5{
+    top:425px;
+    left: 16px;
+    margin: 0px;
+
+}
+
+.chat6{
+    top:525px;
+    left: 16px;
+    margin: 0px;
+}
 .name{
     position: absolute;
     width: 227px;
     height: 20px;
     left: 101px;
-    top: 14px;
 
     font-family: Mulish;
     font-style: normal;
@@ -109,22 +139,41 @@
     line-height: 16px;
     /* or 89% */
 
-
     color: #000000;
 }
 
+.name2{
+    top: 105px;
+    
+}
+
+.name3{
+    top: 210px;
+}
+
+.name4{
+    top: 315px;
+}
+
+.name5{
+    top: 415px;
+}
+.name6{
+    top: 515px;
+}
 .text1{
     position: absolute;
     width: 227px;
     height: 20px;
     left: 101px;
-    top: 46px;
+    top: 25px;
     
     /* text12 */
     
     font-family: Mulish;
     font-style: normal;
     font-weight: normal;
+    text-align: justify;
     font-size: 12px;
     line-height: 16px;
     /* or 133% */
@@ -134,4 +183,155 @@
     
     color: #3D424D;
     
+}
+.text2{
+    top: 135px;
+}
+
+.text3{
+    top: 240px;
+}
+
+.text4{
+    top: 345px;
+}
+
+.text5{
+    top: 445px;
+}
+.text6{
+    top: 545px;
+}
+
+.separator1{
+    position: relative;
+    top: 170px;
+    width: 100%;
+}
+
+.separator2{
+    position: relative;
+    top: 265px;
+}
+
+.separator3{
+    position: relative;
+    top:358px;
+}
+
+.separator4{
+    position: relative;
+    top: 448px;
+}
+
+.separator5{
+    position: relative;
+    top: 540px;
+}
+
+.separator6{
+    position: relative;
+    top: 630px;
+}
+
+.separator7{
+    position: absolute;
+    width: 375px;
+    height: 1px;
+    left: 0px;
+    top: 725px;
+}
+.footer-page{
+    position: fixed;
+    display: flex;
+    flex-direction: column-reverse;
+    
+    left: 0%;
+    right: 0%;
+    bottom: 0px;
+    height: 60px;
+    background: #FFFFFF;
+}
+
+#home{
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    left: 107px;    
+    top: -13px;
+    opacity: 70%;
+
+}
+
+
+
+#friends{
+    position: absolute;
+    width: 42px;
+    height: 42px;
+    left: 230px;
+    top: -15px;
+    opacity: 70%;
+}
+
+#back-image {
+    position: absolute;
+    width: 12px;
+    height: auto;
+    top: 5px;
+    margin: 0px 16px;
+
+    align-self: flex-start;
+}
+
+.chat-text{
+    
+    position: absolute;
+    left: 25.13%;
+    right: 65.33%;
+    top: 39.77%;
+    bottom: 12.79%;
+    margin: 10px;
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: -0.015em;
+
+    color: #000000;
+}
+
+.friends-text{
+    position: absolute;
+    left: 57%;
+    right: 28.8%;
+    top: 39.77%;
+    bottom: 12.79%;
+    margin: 10px;
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: -0.015em;
+
+    color: #000000;
+
+}
+
+.images-footer{
+    margin-bottom: 10px;
 }
