--- a/Entregable5/loginStyles.css
+++ b/Entregable5/loginStyles.css
@@ -64,7 +64,7 @@
     width: 246px;
     height: 258px;
     left: 47px;
-    top: 560px;
+    top: 700px;
 }
 
 .home-message{
@@ -125,3 +125,35 @@
     font-size: 20px;
     color: #3D424D;
 }
+
+/* PARALLAX CODE */
+.parallax-container {
+    position: relative;
+    width: 100%;
+    height: 812px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    perspective: 8px;  /* ACA LA PERSPECTIVA, ES 8 */
+    perspective-origin: 0%;
+    display: flex;
+  }
+
+  .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateZ(0px);
+  }
+  
+  .foreground {
+    margin-top: auto;
+    margin-bottom: 50px;
+    transform-origin: 0;
+    transform: translateZ(3px) scale(0.625); /* 3 ES LA DISTANCIA */
+}
+
+/* funcion para saber la scale -> (perspectiva — distancia) / perspectiva    */
+/* PARALLAX CODE */
+
