--- a/Entregable5/loginStyles.css
+++ b/Entregable5/loginStyles.css
@@ -40,7 +40,7 @@
     position: absolute;
 }
 
-@media (hover: hover) {
+
     
     .sign-up:hover{
         transition-duration: 0.4s;
@@ -48,23 +48,43 @@
         border: 2px solid #203F65 ;
         color: #3D424D;
     }
-}
+
+    @media(hover:hover){
+        .home-message:hover{
+            text-decoration: underline;
+            color:#203F65;
+            cursor: pointer;
+            border-radius: 10%;
+            padding: 4px;
+            opacity: 0.9;
+        }
+    }
+    
 
 
-.logo{
+
+.background__image{
     position: absolute;
     width: 173px;
     height: 152px;
     left: 101px;
-    top: 73px;
+    top: 53px;
 }
 
+.arrow{
+    position: absolute;
+    width: 100px;
+    height: 90px;
+    opacity: 75%;
+    left: 135px;
+    top: -180px;
+}
 .home-photo{
     position: absolute;
     width: 246px;
     height: 258px;
     left: 47px;
-    top: 700px;
+    top: 800px;
 }
 
 .home-message{
@@ -90,6 +110,12 @@
     color: #3D424D;
 }
 
+#message{
+     
+    color: #3D424D;
+    text-align: center;
+}
+
 .button-text-si{
     color: #203F65;
     font-weight: bold;
@@ -111,7 +137,7 @@
     left: 107px;
     top: 242px;
     font-weight: 800;
-    font-size: 45px;
+    font-size: 70px;
     color: #3D424D;
 }
 
@@ -119,10 +145,10 @@
     position: absolute;
     width: 148px;
     height: 40px;
-    left: 153px;
-    top: 295px;
+    left: 155px;
+    top: 307px;
     font-weight: 800;
-    font-size: 20px;
+    font-size: 30px;
     color: #3D424D;
 }
 
@@ -149,9 +175,9 @@
   
   .foreground {
     margin-top: auto;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
     transform-origin: 0;
-    transform: translateZ(3px) scale(0.625); /* 3 ES LA DISTANCIA */
+    transform: translateZ(3.5px) scale(0.5625); /* 3 ES LA DISTANCIA */
 }
 
 /* funcion para saber la scale -> (perspectiva — distancia) / perspectiva    */
