--- a/Entregable5/searchEmptyStyles.css
+++ b/Entregable5/searchEmptyStyles.css
@@ -2,6 +2,11 @@
     font-family: 'Mulish', sans-serif;
 }
 
+a{
+    text-decoration: none;
+}
+
+
 #back-image {
     width: 12px;
     height: auto;
