--- a/Entregable5/chatStyles.css
+++ b/Entregable5/chatStyles.css
@@ -71,12 +71,15 @@
 .top-container{
     position: absolute;
     width: 375px;
-    height: auto;
+    height: 100px;
     left: 0px;
     top: 32px;
     filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.18));
 }
 
+.content{
+    height: 40px;
+}
 
 .chat{
     position: absolute;
